Chat rooms are pretty much working.
Though obviously many more things to do.

--- a/app/public/scss/layout.scss
+++ b/app/public/scss/layout.scss
@@ -115,3 +115,18 @@
     align-items: stretch;
   }
 }
+
+
+.roompage {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.roompage__left {
+  flex: 0 0 60%;
+}
+
+.roompage__right {
+  flex: 1; // takes the remaining ~40%
+}
