--- a/app/public/scss/site.scss
+++ b/app/public/scss/site.scss
@@ -5,7 +5,7 @@
 
 @use "layout.scss";
 @use "breadcrumbs.scss";
-@use "button.scss";
+@use "standard_ui_objects.scss";
 @use "chat.scss";
 @use "content.scss";
 @use "content_links.scss";
