--- a/app/public/scss/bristol_stairs.scss
+++ b/app/public/scss/bristol_stairs.scss
@@ -22,6 +22,16 @@
         display: flex;
     }
 
+    // When a stair is selected on narrow screens, hide the map and show only stair detail
+    &.stair-selected {
+        .bristol_stairs_map {
+            display: none;
+        }
+        .bristol_stairs_panel {
+            width: 100%;
+        }
+    }
+
     .bristol_stairs_panel {
         width: 100%;
         display: flex;
@@ -72,6 +82,22 @@
                 border-radius: 4px;
             }
         }
+
+        .bristol_stairs_close {
+            margin-bottom: 1rem;
+            align-self: flex-start;
+        }
+
+        .bristol_stairs_map_prompt {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.75rem;
+
+            > span {
+                display: block;
+            }
+        }
     }
 
     // Landscape / wide screens
@@ -105,4 +131,18 @@
             }
         }
     }
+}
+
+/* Locate control (my location) on the map – bottom right */
+.bristol_stairs_container .bristol-stairs-locate-control a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px;
+    color: #333;
+}
+
+.bristol_stairs_container .bristol-stairs-locate-control a:hover {
+    color: #000;
 }
