Added ability to see where OpenStreetMap thinks where stairs are.

--- a/app/public/scss/bristol_stairs.scss
+++ b/app/public/scss/bristol_stairs.scss
@@ -161,3 +161,10 @@
 .bristol_stairs_container .bristol-stairs-locate-control a:hover {
     color: #000;
 }
+
+.bristol_stairs_openmap_error {
+    display: block;
+    color: #c00;
+    font-size: 0.9rem;
+    margin-top: 0.5rem;
+}
