Increasing test coverage.

--- a/app/public/scss/meme_upload_panel.scss
+++ b/app/public/scss/meme_upload_panel.scss
@@ -130,6 +130,11 @@
     .search_buttons {
       display: flex;
       gap: 0.5rem;
+      flex-wrap: wrap;
+
+      .untagged_button {
+        margin-left: auto;
+      }
     }
   }
 
